# nightaudit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RECORDING.md  demo.cast  make-demo.py  make-shots.py
docs/shots/: hero.txt  watch.txt
nightaudit/: __init__.py  cli.py  config.py  cron.py
nightaudit/adapters/: codex.py
nightshift/: __init__.py  __main__.py  budget.py  checks.py  cli.py  config.py  cron.py  lock.py  prompts.py  queue.py  report.py  scheduler.py  sessions.py  store.py
nightshift/adapters/: __init__.py  _process.py  base.py  claude_code.py  codex.py  copilot.py
site/: README.md
site/app/: layout.tsx  opengraph-image.tsx
site/components/: digest-payoff.tsx  hero-terminal.tsx  hero.tsx  nav.tsx  pipeline.tsx
site/content/docs/: budget.md  installation.md
site/lib/: run-script.generated.ts  run-script.ts
tests/: conftest.py  test_adapter_registry.py  test_budget.py  test_checks.py  test_checks_integration.py  test_claude_code_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_cron.py  test_demo_is_real.py  test_docs_site.py  test_flag_contract.py  test_lock.py  test_prompts.py  test_queue.py  test_report.py  test_scheduler.py  test_site_is_real.py  test_upgrade_from_nightshift.py
